[package]
name = "fast-fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rayon = "1.10"

[[bench]]
name = "my_benchmark"
harness = false
